# decision-council-lab

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
council/: chat.py  chat_state.py  cli.py  compare.py  config.py  config_profiles.py  costing.py  council_markdown.py  council_session.py  credentials.py  debate.py  debate_prompts.py  debate_runner.py  decision_thread.py  doctor.py  engine.py  implementation_pack.py  intake.py  intake_normalizer.py  json_extract.py  live_completion.py  markdown_format.py  mock_verdict.py  model_presets.py  models.py  multi_debate.py  ollama_probe.py  preset_economics.py  progress.py  prompt_debug.py  prompt_loader.py  prompt_run.py  prompts.py  provider_availability.py  raw_response_debug.py  recovery.py  redaction.py  review.py  review_model.py  role_routing.py  (+10 more)
docs/: ARCHITECTURE.md  BUILD_ORDER.md  CURSOR_START_PROMPT.md  DECISION_COUNCIL_SPEC.md  POD.md
tests/: conftest.py  test_api_mode.py  test_architecture_boundaries.py  test_chat.py  test_cli.py  test_cli_lifecycle.py  test_cli_shell.py  test_compare.py  test_config_profiles.py  test_cost_routing.py  test_council_session.py  test_council_usability.py  test_debate.py  test_decision_review.py  test_decision_thread.py  test_engine.py  test_free_hosted_presets.py  test_intake.py  test_intake_normalizer.py  test_isolation.py  test_json_repair.py  test_model_presets.py  test_ollama_credentials.py  test_openai_compatible.py  test_openai_errors.py  test_openai_provider.py  test_output_quality.py  test_prompt_loader.py  test_providers.py  (+12 more)
(+50 files in other folders)
