[project]
name = "decision-council-lab"
version = "0.1.0"
description = "Domain-agnostic multi-agent decision council prototype."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "keyring>=25.7.0",
    "langgraph>=0.2.0",
    "openai>=2.37.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
